RESOLVED FIXED245507
[LBSE] Fix/enable zooming & panning - improve interop
https://bugs.webkit.org/show_bug.cgi?id=245507
Summary [LBSE] Fix/enable zooming & panning - improve interop
Nikolas Zimmermann
Reported 2022-09-21 16:19:19 PDT
Needs a thorough review of all svg/zoom/page tests and comparison with Chrome/FF/Safari/MiniBrowser+LBSE -- I'm halfway through, stay tuned. Final goal is to ensure that we reach interop, no matter if viewBox is set or not, width/height are relative or absolute, <svg> element composited or not, whether SVG is inline in HTML, or standalone, or via object/embed/iframe/background-image/: zooming/panning should always be possible (unless forbidden), all documents should stay accessible (scrollbars, unless surpressed, etc.).
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-28 16:20:33 PDT
Nikolas Zimmermann
Comment 2 2022-10-06 01:28:26 PDT
EWS
Comment 3 2022-10-19 04:06:29 PDT
Committed 255727@main (f2385c386d5e): <https://commits.webkit.org/255727@main> Reviewed commits have been landed. Closing PR #5073 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.